--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 .App {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  padding: 3rem 1rem;
+}
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.counter_container {
+  height: 70vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 3rem;
 }
 
-.App-link {
-  color: #61dafb;
+.counter {
+  background-color: #ddd;
+  border-radius: 50%;
+  width: 10rem;
+  height: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons_container {
+  display: flex;
+  gap: 1rem;
+}
+
+.buttons_container button {
+  font-family: inherit;
+  font-size: inherit;
+  border: none;
+  padding: 0.8rem 1.5rem;
+  border-radius: 0.5rem;
+}
+
+.buttons_container button:nth-child(1) {
+  background-color: lightcoral;
+}
+
+.buttons_container button:nth-child(2) {
+  background-color: rgb(255, 200, 200);
+}
+.buttons_container button:nth-child(3) {
+  background-color: #ddd;
+}
+.buttons_container button:nth-child(4) {
+  background-color: rgb(131, 225, 206);
+}
+.buttons_container button:nth-child(5) {
+  background-color: lightseagreen;
 }
